# hytale

./: .gitignore  CMakeLists.txt  README.MD  e
.cache/clangd/index/: Block.hpp.3784CE3333A0DF96.idx  Camera.cpp.A6DDC48D90A78CC9.idx  Camera.hpp.4F3C466893EEA9F2.idx  Chunk.cpp.B05464F608D802E3.idx  Chunk.hpp.9E1C7819ABB00B3D.idx  ChunkManager.cpp.C459D0ACC42F932F.idx  Cube.hpp.9F2B01BEFC28F171.idx  Dirt.hpp.A524B0E0E62E45EB.idx  GLTFLoader.cpp.AF4B94792AE7294E.idx  GLTFLoader.hpp.D8B2AAE4EAC1B1C0.idx  Game.cpp.10FD3F032E79CEA6.idx  Game.hpp.69FE01E6AED910A0.idx  Grass.hpp.CEF56A5E99D9A703.idx  Mesh.cpp.E88EB8C029E5136D.idx  Mesh.hpp.F3C5AABE1C8EAEC9.idx  Renderer.cpp.9F59E265FBAF93D6.idx  Renderer.hpp.2E1E82F7B5027894.idx  Shader.cpp.46B7EBAD9A3CCDC1.idx  Shader.hpp.A392BEDB2169871A.idx  glad.c.E9640C0C8BBFD4AF.idx  glad.h.6C6AB405A48F7FB4.idx  imconfig.h.D667F05048162E95.idx  imgui.cpp.2EB4C458C4EBA44D.idx  imgui.h.0E1301F0BAD20A10.idx  imgui_demo.cpp.8F32644E83C9BFF1.idx  imgui_draw.cpp.328F149C75DF7809.idx  imgui_impl_glfw.cpp.5E65FDCCA5D55D06.idx  imgui_impl_glfw.h.A1CBAC56BB54977C.idx  imgui_impl_opengl3.cpp.FE0E281CD588236D.idx  imgui_impl_opengl3.h.D269D27147ADF68C.idx  imgui_impl_opengl3_loader.h.A09256A43725189F.idx  imgui_internal.h.AFF0453F97667546.idx  imgui_tables.cpp.D5E969B2544A3E0D.idx  imgui_widgets.cpp.28CCE48CA9DDEFF2.idx  imstb_rectpack.h.4AEC689B220096F5.idx  (+10 more)
src/: Game.cpp  Game.hpp  main.cpp
src/Helpers/: Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp
src/Rendering/: Block.hpp  Chunk.cpp  Chunk.hpp  ChunkManager.hpp  Renderer.cpp  Renderer.hpp
(+16 files in other folders)
